welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:3: error: reassignment to val
	else if(a=b || a=c || b==c) return 5
                 ^